# defpool

./: .cursorrules  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml
.agent/workflows/: api-standards.md  coding-standards.md  commit.md  release-notes.md  verify-build.md
defpool-deploy/: .gitignore  Makefile  README.md  docker-compose.yml  env.example
defpool-deploy/config/: .env.example
defpool-deploy/scripts/: backup.sh  restore.sh
defpool-portal/: .env  Dockerfile  README.md  env.example  index.html  nginx.conf  pnpm-lock.yaml  tailwind.config.ts
defpool-portal/src/: App.tsx  STYLE_GUIDE.md  index.css
defpool-portal/src/components/tui/: CommandBar.tsx  CurrentMining.tsx  EarningsPanel.tsx  HashrateGraph.tsx  Onboarding.tsx  PoolStats.tsx  ProfitabilityTable.tsx  StatusBar.tsx  SwitchLog.tsx  TuiButton.tsx  TuiCheckbox.tsx  TuiDropdown.tsx  TuiInput.tsx  TuiModal.tsx  TuiRow.tsx  TuiWindow.tsx  WorkersPanel.tsx
defpool-portal/src/components/tui/menus/: HelpMenu.tsx  PayoutMenu.tsx  SettingsMenu.tsx  WalletsMenu.tsx
defpool-portal/src/components/ui/: button.tsx
defpool-portal/src/hooks/: use-defpool-api.ts
defpool-portal/src/pages/: Index.tsx
defpool-portal/supabase/: config.toml
defpool-proxy/: Cargo.toml  Dockerfile  defpool-proxy.toml  run.sh
defpool-proxy/src/: config.rs  job_tracker.rs  main.rs  proxy.rs  share_recorder.rs
defpool-proxy/src/stratum/: mod.rs  sv1.rs  sv2.rs  translator.rs
defpool-server/: Cargo.toml  Dockerfile  defpool-server.toml  run.sh
defpool-server/src/: api.rs  config.rs  main.rs  state.rs
defpool-server/src/accounting/: mod.rs  service.rs
defpool-server/src/daemon/: block_template.rs  mod.rs  rpc_client.rs
defpool-server/src/db/: mod.rs  models.rs  repository.rs
defpool-server/src/db/migrations/: 002_payout_system.sql
defpool-server/src/payout/: calculator.rs  mod.rs  service.rs
defpool-server/src/profitability/: calculator.rs  mod.rs  types.rs
defpool-server/src/profitability/providers/: difficulty.rs  mod.rs  price.rs
defpool-server/src/tasks/: balance_updater.rs  mod.rs  payout_processor.rs  profitability_monitor.rs
doc/: design.md  implementation-status.md  progress-summary.md  testing-guide.md
scripts/: quick-start.sh  stop.sh
