[package]
name = "defpool-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
clap = { version = "4.5.39", features = ["derive"] }
rand = "0.8"
secp256k1 = { version = "0.28.2", features = ["rand", "global-context"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde_json = "1.0"
futures = "0.3"

# Official Stratum V2 libraries from crates.io
binary_sv2 = "5.0"
codec_sv2 = "4.0"
framing_sv2 = "6.0"
noise_sv2 = "1.4"
const_sv2 = "3.0"
buffer_sv2 = "2.0"
