[package]
name = "defpool-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
